fix: Correctly calculate D0.1cc for OARs
The D0.1cc value for OARs was previously reading as zero because of a limitation in the dicompyler-core library for small volumes. This commit introduces a custom function, calculate_d_volume, to accurately calculate the dose to a specific volume from a DVH object.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-# Python
-__pycache__/
-*.pyc
-*.pyd
-*.so
 
-# Reports and temporary files
-
-*.xlsx
-*.xls
-*.PNG
-temp_scripts/
-build/  
-dist/ 
+reports/
+/sample_data/Michelle Albert/
